# cognitive_memory_architecture

./: .gitignore  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  stmemory.sqlite3  streamlit_app.py
frontent/: package-lock.json  package.json
frontent/src/: App.jsx
frontent/src/components/: ChatWindow.jsx  Sidebar.jsx
src/agents/: chat_agent.py  message_agent.py  summarize_agent.py
src/components/: episodic_memory.py  message_history.py  persistant_memory.py  semantic_memory.py  short_term_memory.py  sql.py
src/databases/: ltmemory.py  message_history.py  persistant_memory.py  stmemory.py
src/memories/: persistant_memory.py
src/models/: episodic_memory_model.py  model_base.py  ollama.py  persistant_memory_model.py  stmemory_db_model.py
src/states/: message_state.py
static/: chatbot.css
templates/: base.html  chat.html  messages.html
