[project]
name = "lstm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.119.1",
    "flask>=3.1.2",
    "flask-redis>=0.4.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "markdown>=3.9",
    "psycopg-binary>=3.2.12",
    "redis>=7.0.0",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "streamlit>=1.50.0",
]
